--- a/API/api/src/main/resources/application.properties
+++ b/API/api/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 
 server.port=8082
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:51521:xe
-#spring.datasource.url=jdbc:oracle:thin:@//localhost:51521/xe
+#spring.datasource.url=jdbc:oracle:thin:@localhost:51521:xe
+spring.datasource.url=jdbc:oracle:thin:@//localhost:51521/XE
 spring.datasource.username=CARCENTERADMIN
-spring.datasource.password=oracle
+spring.datasource.password=CARCENTER
 # spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
